dashboard/ValidatingWebhookConfiguration-kubernetes-dashboard-nginx-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations: null
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: nginx
    app.kubernetes.io/version: 1.8.1
    helm.sh/chart: nginx-4.7.1
  name: kubernetes-dashboard-nginx-admission
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubernetes-dashboard-nginx-controller-admission
        namespace: kubernetes-dashboard
        path: /networking/v1/ingresses
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.nginx.ingress.kubernetes.io
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    sideEffects: None
